<resources>
    <string name="app_name">nfc3</string>
    <string name="service_description">nfc33</string>
    <string name="aid_group_description">nfc34</string>

    <string name="RES_2131558401">GPO</string>
    <string name="RES_2131558402">READ RECORD</string>
    <string name="RES_2131558404">Select Payment Application</string>
    <string name="RES_2131558405">Select PPSE</string>
    <string name="RES_2131558407">UNHANDLED</string>
    <string name="RES_2131558409">Interlink</string>
    <string name="RES_2131558412">PLUS</string>
    <string name="RES_2131558413">COMMAND NOT ALLOWED</string>
    <string name="RES_2131558414">CONDITIONS NOT SATISFIED</string>
    <string name="RES_2131558416">FILE NOT FOUND</string>
    <string name="RES_2131558417">FUNCTION NOT SUPPORTED</string>
    <string name="RES_2131558419">INVALID SELECT</string>
    <string name="RES_2131558420">NO ERROR</string>
    <string name="RES_2131558421">SECURITY NOT SATISFIED</string>
    <string name="RES_2131558423">USCommonDebit</string>
    <string name="RES_2131558424">VISA</string>
    <string name="RES_2131558425">VISA</string>
    <string name="RES_2131558426">VISA</string>
    <string name="RES_2131558427">VISA</string>
    <string name="RES_2131558429">VisaElectron</string>
    <string name="RES_2131558430">Visa Contactless Device Evaluation Toolkit</string>
    <string name="RES_2131558431">Visa CDET</string>
    <string name="RES_2131558433">Navigate up</string>
    <string name="RES_2131558435">Done</string>
    <string name="RES_2131558438">OFF</string>
    <string name="RES_2131558439">ON</string>
    <string name="RES_2131558451">sans-serif-medium</string>
    <string name="RES_2131558452">Alt+</string>
    <string name="RES_2131558453">Ctrl+</string>
    <string name="RES_2131558454">delete</string>
    <string name="RES_2131558455">enter</string>
    <string name="RES_2131558456">Function+</string>
    <string name="RES_2131558457">Meta+</string>
    <string name="RES_2131558458">Shift+</string>
    <string name="RES_2131558459">space</string>
    <string name="RES_2131558460">Sym+</string>
    <string name="RES_2131558461">Menu+</string>
    <string name="RES_2131558462">Search…</string>
    <string name="RES_2131558463">Clear query</string>
    <string name="RES_2131558465">Search</string>
    <string name="RES_2131558466">Submit query</string>
    <string name="RES_2131558467">Voice search</string>
    <string name="RES_2131558470">Collapse</string>
    <string name="RES_2131558474">About</string>
    <string name="RES_2131558475">Run All Cards</string>
    <string name="RES_2131558480">Settings</string>
    <string name="RES_2131558493">Close Navigation Drawer</string>
    <string name="RES_2131558504">OK</string>
    <string name="RES_2131558511">Open Navigation Drawer</string>
    <string name="RES_2131558520">paymentGroup</string>
    <string name="RES_2131558523">PPSE</string>
    <string name="RES_2131558524">COMMAND NOT ALLOWED</string>
    <string name="RES_2131558525">PPSE</string>
    <string name="RES_2131558526">Alt+</string>
    <string name="RES_2131558527">VISA</string>
</resources>